更改dept的目录结构以及优化

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,6 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>dispatcherServlet</servlet-name>
-    <url-pattern>*.html</url-pattern>
+    <url-pattern>*.htm</url-pattern>
   </servlet-mapping>
 </web-app>
