--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     username: root
     password: Yi5582829.
-    url: jdbc:mysql://localhost:3306/green?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2b8
+    url: jdbc:mysql://127.0.0.1:3306/green?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2b8
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
 
@@ -29,3 +29,7 @@ druid:
 #和风天气
 weather:
   key: fddfaceae56c427281671b3cb3ef732a
+
+#身份认证
+idCard:
+  appCode: 6e164e7200b0418594a31cd5b2f48741
