--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,12 @@
             <artifactId>hutool-all</artifactId>
             <version>5.5.7</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.rabbitmq/amqp-client -->
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.10.0</version>
+        </dependency>
     </dependencies>
 
     <build>
