--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,15 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <mybatis.version>2.1.2</mybatis.version>
+        <fastjson.version>1.2.31</fastjson.version>
+        <httpclient.version>4.5.10</httpclient.version>
+        <httpcore.version>4.4.13</httpcore.version>
+        <commons.lang.version>2.6</commons.lang.version>
+        <druid.version>1.1.22</druid.version>
+        <io.springfox.version>2.9.2</io.springfox.version>
+        <hutool.version>5.5.7</hutool.version>
+        <rabbitmq.version>5.10.0</rabbitmq.version>
     </properties>
 
     <dependencies>
@@ -30,7 +39,7 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.1.2</version>
+            <version>${mybatis.version}</version>
         </dependency>
 
         <dependency>
@@ -58,39 +67,39 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.31</version>
+            <version>${fastjson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.10</version>
+            <version>${httpclient.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
-            <version>4.4.13</version>
+            <version>${httpcore.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
-            <version>2.6</version>
+            <version>${commons.lang.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.1.22</version>
+            <version>${druid.version}</version>
         </dependency>
         <!--swagger2依赖-->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.9.2</version>
+            <version>${io.springfox.version}</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.9.2</version>
+            <version>${io.springfox.version}</version>
         </dependency>
         <!-- aop -->
         <dependency>
@@ -102,13 +111,13 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.5.7</version>
+            <version>${hutool.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.rabbitmq/amqp-client -->
         <dependency>
             <groupId>com.rabbitmq</groupId>
             <artifactId>amqp-client</artifactId>
-            <version>5.10.0</version>
+            <version>${rabbitmq.version}</version>
         </dependency>
     </dependencies>
 
