--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <mybatis.version>2.1.2</mybatis.version>
+        <mybatis.plus.version>3.4.1</mybatis.plus.version>
+        <freemarker.version>2.3.31</freemarker.version>
         <fastjson.version>1.2.31</fastjson.version>
         <httpclient.version>4.5.10</httpclient.version>
         <httpcore.version>4.4.13</httpcore.version>
@@ -36,12 +37,23 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-boot-starter -->
         <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>${mybatis.version}</version>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatis.plus.version}</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-generator -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>${mybatis.plus.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>${freemarker.version}</version>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
