--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   datasource:
-    username: root
+    username: green
     password: Yi5582829.
     url: jdbc:mysql://127.0.0.1:3306/green?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2b8
     driver-class-name: com.mysql.cj.jdbc.Driver
